<resources>
    <string name="app_name">InventoryTracking</string>
    <string name="activity_main_add_product">Add a new product</string>
    <string name="btn_track_sale">1 item sold</string>
    <string name="btn_track_shipment">1 item arrived</string>
    <string name="btn_order_more">Order more from the supplier</string>
    <string name="btn_delete_product">Delete product</string>
    <string name="hint_product_name">Enter product name</string>
    <string name="hint_price">Enter price</string>
    <string name="hint_quantity">Enter quantity</string>
    <string name="btn_save">Save product</string>
    <string name="hint_email">Supplier\'s email address</string>
    <string name="btn_add_photo">Add a photo</string>
    <string name="activity_main_empty_view">Please use the button below to add a product.</string>
</resources>
