<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:id="@+id/details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        tools:text="iPad Air"/>

    <TextView
        android:id="@+id/details_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Quantity: 15"/>

    <TextView
        android:id="@+id/details_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Price: $9999"/>

    <TextView
        android:id="@+id/details_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Supplier's email address: vlad@spreys.com "/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <Button
            android:id="@+id/details_track_sale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_track_sale"/>

        <Button
            android:id="@+id/details_track_shipment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_track_shipment"/>
    </LinearLayout>
    
    <ImageView
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:id="@+id/product_image_view"
        android:layout_width="250dp"
        android:layout_height="250dp" />

    <Button
        android:id="@+id/details_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_order_more"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/details_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete_product"/>

</LinearLayout>